--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -159,6 +159,18 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <hr>
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div>The Hotspot will be created with a static IP of <b>10.42.0.1</b> (/24 or 255.255.255.0) and IPv6 will be configured with a link-local address (fe80::).</div>
+            <br>
+            <div>It should not be necessary to configure your wifi connection with a static address, the IPv6 connectivity should be sufficient to access by the mDNS name:</div>
+            <br>
+            <b><pre>https://{{ hostname }}.local</pre></b>
+        </div>
+    </div>
+
 </div><!-- end hotspot tab -->
 
     <hr> <hr> <hr>
