--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -60,7 +60,7 @@ var camera_id = {{ camera_id }};
 
     <div class="row">
         <div class="col-sm-6">
-            <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> Use care when deactivating connections.  If you deactivate the connection which is used for normal connectivity, you will lose access to the web interface.  If you lose access, you should be able to power cycle and the connection should reactivate.</div>
+            <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> Use care when deactivating connections.  If you deactivate the primary connection which is used for management, you will lose access to the web interface.  If you lose access, you should be able to power cycle and the connection should reactivate.</div>
         </div>
     </div>
 
