--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -29,6 +29,13 @@ var camera_id = {{ camera_id }};
   </div>
 </nav>
 
+
+<!-- should be above tab contents -->
+{% if not nm_installed %}
+<hr>
+<div><span class="badge rounded-pill bg-warning text-dark">Warning</span> Network Manager is not available</div>
+{% endif %}
+
 <hr>
 
 <div class="tab-content" id="nav-tabContent">
