--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -181,7 +181,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-6">
             <div>The Hotspot will be created with a static IP of <b>10.42.0.1</b> (/24 or 255.255.255.0) and IPv6 will be configured with a link-local address (fe80::).</div>
             <br>
-            <div>It should not be necessary to configure your wifi connection with a static address, the IPv6 connectivity should be sufficient to access by the mDNS name:</div>
+            <div>It should not be necessary to configure your wifi connection with a static address, a DHCP server should be started with the hotspot connection and the IPv6 link-local connectivity should be sufficient to access by the mDNS name:</div>
             <br>
             <b><pre>https://{{ hostname }}.local</pre></b>
             <br>
