--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3754,7 +3754,7 @@ var camera_id = {{ camera_id }};
             <div id="BACKUP_DB_PERIOD_DAYS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>The database will be automatically backed based on this setting</div>
+            <div>The database will be automatically backed based on this setting (0 is disabled)</div>
             <div><span class="badge rounded-pill bg-info text-dark">Note</span> Only valid for SQLite</div>
         </div>
     </div>
