--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6420,6 +6420,47 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__INA3221_CH1_ENABLE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.TEMP_SENSOR__INA3221_CH1_ENABLE(class='form-check-input') }}
+                <div id="TEMP_SENSOR__INA3221_CH1_ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__INA3221_CH2_ENABLE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.TEMP_SENSOR__INA3221_CH2_ENABLE(class='form-check-input') }}
+                <div id="TEMP_SENSOR__INA3221_CH2_ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__INA3221_CH3_ENABLE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.TEMP_SENSOR__INA3221_CH3_ENABLE(class='form-check-input') }}
+                <div id="TEMP_SENSOR__INA3221_CH3_ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.TEMP_SENSOR__MQTT_HOST.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -7874,6 +7915,9 @@ const checkbox_field_names = [
     'TEMP_SENSOR__SHT3X_HEATER_DAY',
     'TEMP_SENSOR__HTU31D_HEATER_NIGHT',
     'TEMP_SENSOR__HTU31D_HEATER_DAY',
+    'TEMP_SENSOR__INA3221_CH1_ENABLE',
+    'TEMP_SENSOR__INA3221_CH2_ENABLE',
+    'TEMP_SENSOR__INA3221_CH3_ENABLE',
     'TEMP_SENSOR__MQTT_TLS',
     'TEMP_SENSOR__MQTT_CERT_BYPASS',
     'DEW_HEATER__ENABLE_DAY',
