--- a/indi_allsky/flask/templates/chart.html
+++ b/indi_allsky/flask/templates/chart.html
@@ -955,6 +955,8 @@ $( document ).ready(function() {
 {% endblock %}
 
 {% block content %}
+<div class="container h-100">
+
 <form id="form_history" onSubmit="return false;">
     <div class="form-group row">
         <div class="col-sm-2">
@@ -1090,6 +1092,8 @@ $( document ).ready(function() {
             <canvas id="histogram-chart"></canvas>
         </div>
     </div>
+</div>
+
 </div>
 
 <script>
