--- a/indi_allsky/flask/templates/sqm.html
+++ b/indi_allsky/flask/templates/sqm.html
@@ -258,6 +258,8 @@ $( document ).ready(function() {
 {% endblock %}
 
 {% block content %}
+<div class="container h-100">
+
 <div class="row">
     <div class="text-center">
         <div class="text-muted" id="message">Loading...</div>
@@ -267,5 +269,7 @@ $( document ).ready(function() {
     <div class="text-center">
         <canvas id="canvas"></canvas>
     </div>
+</div>
+
 </div>
 {% endblock %}
