add daytime timelapse settings

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2619,6 +2619,88 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.TIMELAPSE__USE_NIGHT_CONFIG.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.TIMELAPSE__USE_NIGHT_CONFIG(class='form-check-input') }}
+                <div id="TIMELAPSE__USE_NIGHT_CONFIG-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TIMELAPSE__PRE_PROCESSOR_DAY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TIMELAPSE__PRE_PROCESSOR_DAY(class='form-select bg-secondary') }}
+            <div id="TIMELAPSE__PRE_PROCESSOR_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FFMPEG_FRAMERATE_DAY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FFMPEG_FRAMERATE_DAY(class='form-control bg-secondary') }}
+            <div id="FFMPEG_FRAMERATE_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">ffmpeg framerate for timelapse videos</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FFMPEG_BITRATE_DAY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FFMPEG_BITRATE_DAY(class='form-control bg-secondary') }}
+            <div id="FFMPEG_BITRATE_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default: 5000k</div>
+            <div>High quality timelapses with dynamic content (eg auroras) should have a much higher rate</div>
+            <div>15000k-20000k for a 1920x1080 resolution.</div>
+            <div>30000k-40000k for 4K video</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FFMPEG_VFSCALE_DAY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.FFMPEG_VFSCALE_DAY(class='form-select bg-secondary') }}
+            <div id="FFMPEG_VFSCALE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div><span class="badge rounded-pill bg-danger text-dark">Warning</span> Higher resolution videos may cause timelapses to fail on systems with less than 4GB RAM.  Scale your resolution to reduce the memory requirements.</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FFMPEG_EXTRA_OPTIONS_DAY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.FFMPEG_EXTRA_OPTIONS_DAY(class='form-control bg-secondary') }}
+            <div id="FFMPEG_EXTRA_OPTIONS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div>ffmpeg extra options (not validated).</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> "-level 3.1" can reduce artifacts and increase IOS compatibility</div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.TIMELAPSE__FFMPEG_REPORT.label }}
         </div>
         <div class="col-sm-2">
@@ -7555,15 +7637,21 @@ const field_names = [
     'IMAGE_QUEUE_BACKOFF',
     'TIMELAPSE_EXPIRE_DAYS',
     'FFMPEG_FRAMERATE',
+    'FFMPEG_FRAMERATE_DAY',
     'FFMPEG_BITRATE',
+    'FFMPEG_BITRATE_DAY',
     'FFMPEG_VFSCALE',
+    'FFMPEG_VFSCALE_DAY',
     'FFMPEG_CODEC',
     'FFMPEG_EXTRA_OPTIONS',
+    'FFMPEG_EXTRA_OPTIONS_DAY',
     'TIMELAPSE_SKIP_FRAMES',
     'TIMELAPSE__PRE_PROCESSOR',
+    'TIMELAPSE__PRE_PROCESSOR_DAY',
     'TIMELAPSE__IMAGE_CIRCLE',
     'TIMELAPSE__KEOGRAM_RATIO',
     'TIMELAPSE__PRE_SCALE',
+    'TIMELAPSE__USE_NIGHT_CONFIG',
     'IMAGE_LABEL_SYSTEM',
     'TEXT_PROPERTIES__FONT_FACE',
     'TEXT_PROPERTIES__FONT_HEIGHT',
@@ -8223,6 +8311,54 @@ $('#USE_NIGHT_COLOR').on('change', function() {
 });
 
 
+// Night timelapse settings
+$('#TIMELAPSE__USE_NIGHT_CONFIG').on('change', function() {
+    if ($('#TIMELAPSE__USE_NIGHT_CONFIG').prop('checked')) {
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').attr('readonly', true);
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').attr('disabled', true);
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').addClass('bg-dark');
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').addClass('text-secondary');
+        $('#FFMPEG_FRAMERATE_DAY').attr('readonly', true);
+        $('#FFMPEG_FRAMERATE_DAY').attr('disabled', true);
+        $('#FFMPEG_FRAMERATE_DAY').addClass('bg-dark');
+        $('#FFMPEG_FRAMERATE_DAY').addClass('text-secondary');
+        $('#FFMPEG_BITRATE_DAY').attr('readonly', true);
+        $('#FFMPEG_BITRATE_DAY').attr('disabled', true);
+        $('#FFMPEG_BITRATE_DAY').addClass('bg-dark');
+        $('#FFMPEG_BITRATE_DAY').addClass('text-secondary');
+        $('#FFMPEG_VFSCALE_DAY').attr('readonly', true);
+        $('#FFMPEG_VFSCALE_DAY').attr('disabled', true);
+        $('#FFMPEG_VFSCALE_DAY').addClass('bg-dark');
+        $('#FFMPEG_VFSCALE_DAY').addClass('text-secondary');
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').attr('readonly', true);
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').attr('disabled', true);
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').addClass('bg-dark');
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').addClass('text-secondary');
+    } else {
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').removeAttr('readonly');
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').removeAttr('disabled');
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').removeClass('bg-dark');
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').removeClass('text-secondary');
+        $('#FFMPEG_FRAMERATE_DAY').removeAttr('readonly');
+        $('#FFMPEG_FRAMERATE_DAY').removeAttr('disabled');
+        $('#FFMPEG_FRAMERATE_DAY').removeClass('bg-dark');
+        $('#FFMPEG_FRAMERATE_DAY').removeClass('text-secondary');
+        $('#FFMPEG_BITRATE_DAY').removeAttr('readonly');
+        $('#FFMPEG_BITRATE_DAY').removeAttr('disabled');
+        $('#FFMPEG_BITRATE_DAY').removeClass('bg-dark');
+        $('#FFMPEG_BITRATE_DAY').removeClass('text-secondary');
+        $('#FFMPEG_VFSCALE_DAY').removeAttr('readonly');
+        $('#FFMPEG_VFSCALE_DAY').removeAttr('disabled');
+        $('#FFMPEG_VFSCALE_DAY').removeClass('bg-dark');
+        $('#FFMPEG_VFSCALE_DAY').removeClass('text-secondary');
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').removeAttr('readonly');
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').removeAttr('disabled');
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').removeClass('bg-dark');
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').removeClass('text-secondary');
+    }
+});
+
+
 // Dew Heater thresholds
 $('#DEW_HEATER__THOLD_ENABLE').on('change', function() {
     if ($('#DEW_HEATER__THOLD_ENABLE').prop('checked')) {
@@ -8476,6 +8612,30 @@ $( document ).ready(function() {
         $('#GAMMA_CORRECTION_DAY').attr('disabled', true);
         $('#GAMMA_CORRECTION_DAY').addClass('bg-dark');
         $('#GAMMA_CORRECTION_DAY').addClass('text-secondary');
+    }
+
+    // Night timelapse settings
+    if ($('#TIMELAPSE__USE_NIGHT_CONFIG').prop('checked')) {
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').attr('readonly', true);
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').attr('disabled', true);
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').addClass('bg-dark');
+        $('#TIMELAPSE__PRE_PROCESSOR_DAY').addClass('text-secondary');
+        $('#FFMPEG_FRAMERATE_DAY').attr('readonly', true);
+        $('#FFMPEG_FRAMERATE_DAY').attr('disabled', true);
+        $('#FFMPEG_FRAMERATE_DAY').addClass('bg-dark');
+        $('#FFMPEG_FRAMERATE_DAY').addClass('text-secondary');
+        $('#FFMPEG_BITRATE_DAY').attr('readonly', true);
+        $('#FFMPEG_BITRATE_DAY').attr('disabled', true);
+        $('#FFMPEG_BITRATE_DAY').addClass('bg-dark');
+        $('#FFMPEG_BITRATE_DAY').addClass('text-secondary');
+        $('#FFMPEG_VFSCALE_DAY').attr('readonly', true);
+        $('#FFMPEG_VFSCALE_DAY').attr('disabled', true);
+        $('#FFMPEG_VFSCALE_DAY').addClass('bg-dark');
+        $('#FFMPEG_VFSCALE_DAY').addClass('text-secondary');
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').attr('readonly', true);
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').attr('disabled', true);
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').addClass('bg-dark');
+        $('#FFMPEG_EXTRA_OPTIONS_DAY').addClass('text-secondary');
     }
 
     // Dew Heater thresholds
