add log messages for image hooks

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1545,6 +1545,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-5">
             <div>
                 <div>External script to run before saving image</div>
+                <div><span class="badge rounded-pill bg-danger text-dark">Warning</span> The image save hooks can slow down image processing if they take too long to execute</div>
             </div>
         </div>
     </div>
